--- a/src/app/pages/bibleverse/bibleverse.page.html
+++ b/src/app/pages/bibleverse/bibleverse.page.html
@@ -1,10 +1,13 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-button slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-button>
     <ion-title>
-      <strong>Chapitre 3 du livre de Jean</strong>
-    </ion-title>
+      <strong>Chapitre 3 du livre de Jean</strong></ion-title>
   </ion-toolbar>
 </ion-header>
+        
 
 <ion-content>
   <ion-list>
